Updated style.css with Github link.

--- a/style.css
+++ b/style.css
@@ -4,4 +4,5 @@
  Author:       Ashwin Kumar C
  Template:     twentytwentyone
  Version:      0.0.1
+ GitHub Theme URI: https://github.com/ashwinncj/twentytwentyone-diadem-child
 */
