--- a/style.css
+++ b/style.css
@@ -18,4 +18,23 @@
   max-width: 1200px;
 }
 
+.ddp-primary-menu {
+  position: relative;
+}
+.ddp-primary-menu > li {
+  display: inline;
+  letter-spacing: 1px;
+  padding-right: 10px;
+}
+.ddp-primary-menu .menu-item-has-children .sub-menu {
+  display: none;
+  position: absolute;
+  list-style-type: none;
+  left: 0;
+  top: 20px;
+}
+.ddp-primary-menu .menu-item-has-children:hover .sub-menu {
+  display: block;
+}
+
 /*# sourceMappingURL=style.css.map */
